// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlightInfoComponent Should display a flight 1`] = `
<flight-info
  __ngContext__="0"
  flight={[Function Object]}
>
  <mat-list-item
    class="mat-list-item mat-focus-indicator"
  >
    <span
      class="mat-list-item-content"
    >
      <span
        class="mat-ripple mat-list-item-ripple"
        mat-ripple=""
      />
      <span
        class="mat-list-text"
      />
      <div
        class="fare"
      >
        <span
          class="airport"
        >
        </span>
        <small>
        </small>
      </div>
      <div
        class="fare"
      >
        <span
          class="airport"
        >
        </span>
        <small>
        </small>
      </div>
    </span>
  </mat-list-item>
</flight-info>
`;

exports[`FlightInfoComponent Should display a flight from DUB to WRO 1`] = `
<flight-info
  __ngContext__={[Function Number]}
  flight={[Function Object]}
>
  <mat-list-item
    class="mat-list-item mat-focus-indicator"
  >
    <span
      class="mat-list-item-content"
    >
      <span
        class="mat-ripple mat-list-item-ripple"
        mat-ripple=""
      />
      <span
        class="mat-list-text"
      />
      <div
        class="fare"
      >
        <span
          class="airport"
        >
          DUB
        </span>
        <small>
          6/15/18, 5:25 PM
        </small>
      </div>
      <div
        class="fare"
      >
        <span
          class="airport"
        >
          WRO
        </span>
        <small>
          6/15/18, 9:00 PM
        </small>
      </div>
    </span>
  </mat-list-item>
</flight-info>
`;
